# jemalloc

./: .gitignore  CMakeLists.txt  README.md
files/pkgconfig/: jemalloc.pc.in  jemalloc_mt.pc.in
src/: jemalloc_linux.c  jemalloc_wrapper.c  rb.h
